Added a carousel block

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
 </head>
 <body>
     <section class="promo">
@@ -110,5 +111,18 @@
             </form>
         </div>
     </section>
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__wrapper">
+                <div><img src="img/slide_1.jpg" alt="slide"></div>
+                <div><img src="img/slide_2.jpg" alt="slide"></div>
+                <div><img src="img/slide_3.jpg" alt="slide"></div>
+            </div>
+            <button type="button" class="prev"><img src="icons/left.svg" alt="arrow"></button>
+            <button type="button" class="next"><img src="icons/right.svg" alt="arrow"></button>
+        </div>
+    </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="js/slider.js"></script>
 </body>
 </html>
