Added the comment block

--- a/src/index.html
+++ b/src/index.html
@@ -408,6 +408,62 @@
             </div>
         </div>
     </section>
+    <section class="comment">
+        <div class="container">
+            <div class="title">отзывы клиентов</div>
+            <div class="comment__item">
+                <img src="img/feed_1.png" alt="Ирина Иванченко" class="comment__img">
+                <div class="comment__text">
+                    <div class="comment__person">Ирина Иванченко</div>
+                    <div class="comment__count">2 полумарафона</div>
+                    <div class="comment__description">
+                        Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали
+                        пульсометр, который подошёл именно под мои цели и финансовые возможности.
+                        Через некоторое время решила обновить гаджет - не раздумывая обратилась туда<br>
+                        же.
+                        <br><br>
+                        Новые цели - новый гаджет!
+                        <br><br>
+                        Спасибо, RunSmart! 
+                    </div>
+                </div>
+            </div>
+            <div class="comment__item">
+                <img src="img/feed_2.png" alt="Иван Сёмочкин" class="comment__img">
+                <div class="comment__text">
+                    <div class="comment__person">Иван Сёмочкин</div>
+                    <div class="comment__count">1 полумарафон</div>
+                    <div class="comment__description">
+                        Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе 
+                        делал. Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели 
+                        первую тренировку, научили пользоваться новым гаджетом. Также объяснили 
+                        основы анатомии, составили план тренировок на месяц вперёд.
+                        <br><br>
+                        С ними подготовился к своему первому полумарафону! Спасибо!!!
+                    </div>
+                </div>
+            </div>
+            <div class="comment__item">
+                <img src="img/feed_3.png" alt="Юлия Дашкина" class="comment__img">
+                <div class="comment__text">
+                    <div class="comment__person">Юлия Дашкина</div>
+                    <div class="comment__count">2 полумарафона</div>
+                    <div class="comment__description">
+                        Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось
+                        тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и
+                        решила попробовать.
+                        <br><br>
+                        Позвонила, ребята поинтересовались моими целями и подобрали очень
+                        интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала 
+                        уже 2 полумарафона и несколько более коротких забегов и не намерена<br>
+                        останавливаться!
+                        <br><br>
+                        Спасибо!!!
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/slider.js"></script>
