--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                     <span>Garmin, Polar, Suunto</span>
                 </div>
                 <div class="header__contacts">
-                    <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <a href="tel:+380685261992" class="header__phone">+38 (068) 52-619-92</a>
                     <button data-modal="consultation" class="button">заказать звонок</button>
                 </div>
             </header>
@@ -49,7 +49,7 @@
                 <button data-modal="consultation" class="button button_main">заказать консультацию</button>
                 <div class="promo__link">
                     или
-                    <a href="#">перейти в каталог</a>
+                    <a href="#catalog">перейти в каталог</a>
                 </div>             
             </div>
         </div>
@@ -122,7 +122,7 @@
             <button type="button" class="next"><img src="icons/right.svg" alt="arrow"></button>
         </div>
     </section>
-    <section class="catalog">
+    <section class="catalog" id="catalog">
         <div class="container">
             <h2 class="title">Каталог пульсометров</h2>          
             <ul class="catalog__tabs">
@@ -155,8 +155,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">4 750 руб.</div>
-                            <div class="catalog-item__new-price">4 500 руб.</div>
+                            <div class="catalog-item__old-price">1 110 грн.</div>
+                            <div class="catalog-item__new-price">900 грн.</div>
                         </div>
                         <button class="button button_mini">купить</button>
                     </div>
@@ -185,8 +185,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">6 690 руб.</div>
-                            <div class="catalog-item__new-price">6 641 руб.</div>
+                            <div class="catalog-item__old-price">1 300 грн.</div>
+                            <div class="catalog-item__new-price">1 141 грн.</div>
                         </div>
                         <button class="button button_mini">купить</button>
                     </div>
@@ -215,8 +215,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">7 390 руб.</div>
-                            <div class="catalog-item__new-price">7 021 руб.</div>
+                            <div class="catalog-item__old-price">1 000 грн.</div>
+                            <div class="catalog-item__new-price">860 грн.</div>
                         </div>
                         <button class="button button_mini">купить</button>
                     </div>
@@ -245,8 +245,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">4 750 руб.</div>
-                            <div class="catalog-item__new-price">4 500 руб.</div>
+                            <div class="catalog-item__old-price">1 150 грн.</div>
+                            <div class="catalog-item__new-price">950 грн.</div>
                         </div>
                         <button class="button button_mini">купить</button>
                     </div>
@@ -275,8 +275,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">6 690 руб.</div>
-                            <div class="catalog-item__new-price">6 641 руб.</div>
+                            <div class="catalog-item__old-price">1 290 грн.</div>
+                            <div class="catalog-item__new-price">1 000 грн.</div>
                         </div>
                         <button class="button button_mini">купить</button>
                     </div>
@@ -305,8 +305,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">6 690 руб.</div>
-                            <div class="catalog-item__new-price">6 641 руб.</div>
+                            <div class="catalog-item__old-price">940 грн.</div>
+                            <div class="catalog-item__new-price">1 321 грн.</div>
                         </div>
                         <button class="button button_mini">купить</button>
                     </div>
@@ -337,8 +337,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">6 690 руб.</div>
-                            <div class="catalog-item__new-price">6 641 руб.</div>
+                            <div class="catalog-item__old-price">1 490 грн.</div>
+                            <div class="catalog-item__new-price">1 041 грн.</div>
                         </div>
                         <button class="button button_mini">купить</button>
                     </div>
@@ -369,8 +369,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">4 750 руб.</div>
-                            <div class="catalog-item__new-price">4 500 руб.</div>
+                            <div class="catalog-item__old-price">1070 грн.</div>
+                            <div class="catalog-item__new-price">820 грн.</div>
                         </div>
                         <button class="button button_mini">купить</button>
                     </div>
@@ -399,8 +399,8 @@
                     <hr>
                     <div class="catalog-item__footer">
                         <div class="catalog-item__prices">
-                            <div class="catalog-item__old-price">6 690 руб.</div>
-                            <div class="catalog-item__new-price">6 641 руб.</div>
+                            <div class="catalog-item__old-price">1 390 грн.</div>
+                            <div class="catalog-item__new-price">1 041 грн.</div>
                         </div>
                         <button class="button button_mini">купить</button>
                     </div>
@@ -465,11 +465,11 @@
         </div>
     </section>
     <footer class="footer">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.4304811959933!2d37.644807315829034!3d55.76839498055751!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2sua!4v1648120622206!5m2!1sru!2sua" 
-        width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d369.3313194452548!2d30.481017207028913!3d50.47910019834447!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde7113b3e39%3A0x80dab3847ce182c5!2sCrimeaBridge!5e0!3m2!1sru!2sua!4v1649098212953!5m2!1sru!2sua" width="100%" height="100%" style="border:0;" 
+        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="footer__info">
-            <address class="footer__address">Москва, Мясницкий проезд, д.3с1</address>
-            <a href="tel:84999228974" class="footer__phone">8 (499) 922-89-74</a>
+            <address class="footer__address">м.Київ, вул.Фрунзе, б.81</address>
+            <a href="tel:+380685261992" class="footer__phone">+38 (068) 526-19-92</a>
             <div class="footer__social">
                 <a href="#" class="footer__social-item"><img src="icons/facebook.svg" alt="facebook"></a>
                 <a href="#" class="footer__social-item"><img src="icons/instagram.svg" alt="instagram"></a>
