--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,12 @@
     <title>RunSmart</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
 </head>
 <body>
-    <section class="promo">
+    <section class="promo" id="up">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -54,7 +55,7 @@
             </div>
         </div>
     </section>
-    <section class="advantages">
+    <div class="advantages">
         <div class="container">
             <div class="title">наши преимущества</div>
             <div class="advantages__wrapper">
@@ -92,7 +93,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <section class="consultation">
         <div class="container">
             <h2 class="title title_left">
@@ -111,7 +112,7 @@
             </form>
         </div>
     </section>
-    <section class="carousel">
+    <div class="carousel">
         <div class="container">
             <div class="carousel__wrapper">
                 <div><img src="img/slide_1.jpg" alt="slide"></div>
@@ -121,7 +122,7 @@
             <button type="button" class="prev"><img src="icons/left.svg" alt="arrow"></button>
             <button type="button" class="next"><img src="icons/right.svg" alt="arrow"></button>
         </div>
-    </section>
+    </div>
     <section class="catalog" id="catalog">
         <div class="container">
             <h2 class="title">Каталог пульсометров</h2>          
@@ -408,7 +409,7 @@
             </div>
         </div>
     </section>
-    <section class="comment">
+    <div class="comment">
         <div class="container">
             <div class="title">отзывы клиентов</div>
             <div class="comment__item">
@@ -463,10 +464,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <footer class="footer">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d369.3313194452548!2d30.481017207028913!3d50.47910019834447!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde7113b3e39%3A0x80dab3847ce182c5!2sCrimeaBridge!5e0!3m2!1sru!2sua!4v1649098212953!5m2!1sru!2sua" width="100%" height="100%" style="border:0;" 
-        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d369.3313194452548!2d30.481017207028913!3d50.47910019834447!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde7113b3e39%3A0x80dab3847ce182c5!2sCrimeaBridge!5e0!3m2!1sru!2sua!4v1649098212953!5m2!1sru!2sua" 
+        class = "footer__iframe" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="footer__info">
             <address class="footer__address">м.Київ, вул.Фрунзе, б.81</address>
             <a href="tel:+380685261992" class="footer__phone">+38 (068) 526-19-92</a>
@@ -508,6 +509,9 @@
             </div>
         </div>
     </div>
+    <a href="#up" class="pageup">
+        <img src="icons/up.svg" alt="up">
+    </a>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/slider.js"></script>
