--- a/src/index.html
+++ b/src/index.html
@@ -467,7 +467,7 @@
     </div>
     <footer class="footer">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d369.3313194452548!2d30.481017207028913!3d50.47910019834447!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde7113b3e39%3A0x80dab3847ce182c5!2sCrimeaBridge!5e0!3m2!1sru!2sua!4v1649098212953!5m2!1sru!2sua" 
-        class = "footer__iframe" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        class = "footer__iframe" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%" height="100%"></iframe>
         <div class="footer__info">
             <address class="footer__address">м.Київ, вул.Фрунзе, б.81</address>
             <a href="tel:+380685261992" class="footer__phone">+38 (068) 526-19-92</a>
