--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
                     <div class="advantages__description">
                         Помогаем с обучением 
                         правильной технике бега! 
-                        Дружим с крупнейшей школой бега в России - 
+                        Дружим с крупнейшей школой бега в Украине - 
                         <a href="#">I LOVE RUNNING.</a>
                     </div>
                 </div>
