--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <section class="promo" id="up">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -56,7 +56,7 @@
             </div>
         </div>
     </section>
-    <div class="advantages">
+    <section class="advantages">
         <div class="container">
             <div class="title">наши преимущества</div>
             <div class="advantages__wrapper">
@@ -88,13 +88,13 @@
                     <div class="advantages__description">
                         Помогаем с обучением 
                         правильной технике бега! 
-                        Дружим с крупнейшей школой бега в Украине - 
+                        Дружим с крупнейшей школой бега в России - 
                         <a href="#">I LOVE RUNNING.</a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <section class="consultation">
         <div class="container">
             <h2 class="title title_left">
@@ -113,7 +113,7 @@
             </form>
         </div>
     </section>
-    <div class="carousel">
+    <section class="carousel">
         <div class="container">
             <div class="carousel__wrapper">
                 <div class="carousel__wrapper-slide"><img src="img/slide_1.jpg" alt="slide"></div>
@@ -123,11 +123,7 @@
             <button type="button" class="prev"><img src="icons/left.svg" alt="arrow"></button>
             <button type="button" class="next"><img src="icons/right.svg" alt="arrow"></button>
         </div>
-<<<<<<< HEAD
     </section>
-=======
-    </div>
->>>>>>> 36fd824f98ad21a0cf6219378b1d4c15cbf04b3a
     <section class="catalog" id="catalog">
         <div class="container">
             <h2 class="title">Каталог пульсометров</h2>          
@@ -414,7 +410,7 @@
             </div>
         </div>
     </section>
-    <div class="comment">
+    <section class="comment">
         <div class="container">
             <div class="title">отзывы клиентов</div>
             <div class="comment__item">
@@ -469,15 +465,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <footer class="footer">
-<<<<<<< HEAD
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d369.3313194452548!2d30.481017207028913!3d50.47910019834447!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde7113b3e39%3A0x80dab3847ce182c5!2sCrimeaBridge!5e0!3m2!1sru!2sua!4v1649098212953!5m2!1sru!2sua" width="100%" height="100%" style="border:0;" 
         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-=======
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d369.3313194452548!2d30.481017207028913!3d50.47910019834447!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde7113b3e39%3A0x80dab3847ce182c5!2sCrimeaBridge!5e0!3m2!1sru!2sua!4v1649098212953!5m2!1sru!2sua" 
-        class = "footer__iframe" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%" height="100%"></iframe>
->>>>>>> 36fd824f98ad21a0cf6219378b1d4c15cbf04b3a
         <div class="footer__info">
             <address class="footer__address">м.Київ, вул.Фрунзе, б.81</address>
             <a href="tel:+380685261992" class="footer__phone">+38 (068) 526-19-92</a>
@@ -519,18 +510,6 @@
             </div>
         </div>
     </div>
-<<<<<<< HEAD
-=======
-    <a href="#up" class="pageup">
-        <img src="icons/up.svg" alt="up">
-    </a>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
-    <script src="js/slider.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/jquery.maskedinput.min.js"></script>
-    <script src="js/script.js"></script>
->>>>>>> 36fd824f98ad21a0cf6219378b1d4c15cbf04b3a
 </body>
     <script src="js/tabs.js"></script>
     <script src="js/slider.js"></script>
