Added a timer to the project

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
             </div>
         </div>
     </section>
-    <section class="advantages">
+    <div class="advantages">
         <div class="container">
             <div class="title">наши преимущества</div>
             <div class="advantages__wrapper">
@@ -88,13 +88,13 @@
                     <div class="advantages__description">
                         Помогаем с обучением 
                         правильной технике бега! 
-                        Дружим с крупнейшей школой бега в России - 
+                        Дружим с крупнейшей школой бега в Украине - 
                         <a href="#">I LOVE RUNNING.</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <section class="consultation">
         <div class="container">
             <h2 class="title title_left">
@@ -408,9 +408,41 @@
                     </div>
                 </div>
             </div>
+            <div class="catalog__timer">
+                <div class="catalog__timer-text">
+                    <div class="catalog__title">Акция для новых клиентов!</div>
+                    <div class="catalog__description">
+                        Мы ценим каждого клиента и предлагаем вам стать одним из них на очень выгодных условиях. 
+                        Каждому, кто закажет доставку пульсометра, будет предоставлена скидка в размере <span>20%!</span>
+                        <br><br>
+                        Акция закончится 28 октября в 23:59
+                    </div>
+                </div>
+                <div class="catalog__timer-block">
+                    <div class="catalog__title">Осталось до конца акции:</div>
+                    <div class="timer">
+                        <div class="timer__block">
+                            <span id="days">99</span>
+                            дней
+                        </div>
+                        <div class="timer__block">
+                            <span id="hours">20</span>
+                            часов
+                        </div>
+                        <div class="timer__block">
+                            <span id="minutes">56</span>
+                            минут
+                        </div>
+                        <div class="timer__block">
+                            <span id="seconds">20</span>
+                            секунд
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-    <section class="comment">
+    <div class="comment">
         <div class="container">
             <div class="title">отзывы клиентов</div>
             <div class="comment__item">
@@ -465,7 +497,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <footer class="footer">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d369.3313194452548!2d30.481017207028913!3d50.47910019834447!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde7113b3e39%3A0x80dab3847ce182c5!2sCrimeaBridge!5e0!3m2!1sru!2sua!4v1649098212953!5m2!1sru!2sua" width="100%" height="100%" style="border:0;" 
         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -511,6 +543,7 @@
         </div>
     </div>
 </body>
+    <script src="js/timer.js"></script>
     <script src="js/tabs.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/modal.js"></script>
